--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
                   class="row row-cols-lg-4 row-cols-md-3 row-cols-2 g-4 text-center">
                   <!-- JS -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\js.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">JavaScript</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -204,11 +208,15 @@
                   </div>
                   <!-- Python -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\python.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">Python</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -227,11 +235,15 @@
                   </div>
                   <!-- HTML -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\html.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">HTML</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -248,11 +260,15 @@
                   </div>
                   <!-- CSS -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\css.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">CSS</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -269,14 +285,18 @@
                   </div>
                   <!-- .NET -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img
                             src="img\bootstrap.png"
                             class="skill_img"
                             alt="" />
                           <h5 class="card-title mb-0">Bootstrap</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -293,11 +313,15 @@
                   </div>
                   <!-- Bootstrap -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\c-sharp.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">.NET</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -309,18 +333,22 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Currently working a lot with it, learning along
+                          Currently working with it, learning along
                         </p>
                       </div>
                     </div>
                   </div>
                   <!-- SQL -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\sql.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">SQL</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -331,17 +359,21 @@
                             aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text">Learned a lot in the University</p>
+                        <p class="card-text">Used it a lot in the University</p>
                       </div>
                     </div>
                   </div>
                   <!-- Libraries -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\library.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">Libraries</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -360,11 +392,15 @@
                   </div>
                   <!-- Power Apps -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\papps.svg" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">Power Apps</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -383,14 +419,18 @@
                   </div>
                   <!-- Power Autmate -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img
                             src="img\pautomate.svg"
                             class="skill_img"
                             alt="" />
                           <h5 class="card-title mb-0">Power Automate</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -409,13 +449,17 @@
                   </div>
                   <!-- Rest Api-s -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\api.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">REST API-s</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
-                        <div class="progress my-3">
+                        <div class="progress progress__toggler my-3">
                           <div
                             class="progress-bar"
                             role="progressbar"
@@ -425,18 +469,23 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          MS API-s, implementing them in .NET apps
+                          Microsoft (Graph, Management, SP) API-s, implementing
+                          them in .NET apps
                         </p>
                       </div>
                     </div>
                   </div>
                   <!-- Git -->
                   <div class="col">
-                    <div class="card" style="height: 10rem">
-                      <div class="card-body">
+                    <div class="card">
+                      <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\git.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">Git</h5>
+                          <img
+                            class="skill__info"
+                            src="img/info.png"
+                            alt="info" />
                         </div>
                         <div class="progress my-3">
                           <div
@@ -448,7 +497,7 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Just for basic project management
+                          Using it for basic project management
                         </p>
                       </div>
                     </div>
@@ -493,9 +542,9 @@
                         <div
                           class="carousel-caption d-none d-md-block rounded_edges">
                           <img
-                            src="/img/logo.png"
+                            src="/img/forkify-logo.png"
                             class="forkify__logo"
-                            alt="logo" />
+                            alt="forkify-logo" />
                           <p>
                             A copy of the famous application from Jonas
                             Schmedtmann
@@ -510,8 +559,8 @@
                           alt="github" />
                         <div
                           class="carousel-caption d-none d-md-block text-white">
-                          <h5>More to come</h5>
-                          <p>Every project will be available on my Github</p>
+                          <h5>Smaller projects</h5>
+                          <p>Everything is available on my Github</p>
                         </div>
                       </div>
                     </div>
