--- a/index.html
+++ b/index.html
@@ -191,18 +191,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 85%"
-                            aria-valuenow="85"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 85%"
+                              aria-valuenow="85"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Comes from Udemy and Youtube, my Main skill
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Comes from Udemy and Youtube, my Main skill
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -218,18 +220,21 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 85%"
-                            aria-valuenow="85"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 85%"
+                              aria-valuenow="85"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Got into it in 2018, still loving & learning it,
+                            using it mainly for data analyzing
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Got into it in 2018, still loving & learning it
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -245,16 +250,18 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 80%"
-                            aria-valuenow="80"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 80%"
+                              aria-valuenow="80"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">JS's best friend</p>
                         </div>
-                        <p class="card-text">JS's best friend</p>
                       </div>
                     </div>
                   </div>
@@ -270,16 +277,18 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 70%"
-                            aria-valuenow="70"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 70%"
+                              aria-valuenow="70"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">JS's second best friend</p>
                         </div>
-                        <p class="card-text">JS's second best friend</p>
                       </div>
                     </div>
                   </div>
@@ -298,16 +307,18 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 70%"
-                            aria-valuenow="70"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 70%"
+                              aria-valuenow="70"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">Learning along with CSS</p>
                         </div>
-                        <p class="card-text">Learning along with CSS</p>
                       </div>
                     </div>
                   </div>
@@ -323,18 +334,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 60%"
-                            aria-valuenow="60"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 60%"
+                              aria-valuenow="60"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Currently working with it, learning along
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Currently working with it, learning along
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -350,16 +363,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 60%"
-                            aria-valuenow="60"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 60%"
+                              aria-valuenow="60"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Used it a lot in the University
+                          </p>
                         </div>
-                        <p class="card-text">Used it a lot in the University</p>
                       </div>
                     </div>
                   </div>
@@ -375,18 +392,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 65%"
-                            aria-valuenow="65"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 65%"
+                              aria-valuenow="65"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Using many kinds of them a lot in JS, Python, .NET
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Using many kinds of them a lot in JS, Python, .NET
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -402,18 +421,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 60%"
-                            aria-valuenow="60"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 60%"
+                              aria-valuenow="60"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            For making custom SharePoint pages at work
+                          </p>
                         </div>
-                        <p class="card-text">
-                          For making custom SharePoint pages at work
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -432,18 +453,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 60%"
-                            aria-valuenow="60"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 60%"
+                              aria-valuenow="60"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Automating stuff, mainly work related
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Automating stuff, mainly work related
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -459,19 +482,22 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress progress__toggler my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 60%"
-                            aria-valuenow="60"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 60%"
+                              aria-valuenow="60"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Microsoft (Graph, Management, SP) API-s,
+                            implementing them in .NET apps, also basic WEB API-s
+                            in JS projects
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Microsoft (Graph, Management, SP) API-s, implementing
-                          them in .NET apps
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -487,18 +513,20 @@
                             src="img/info.png"
                             alt="info" />
                         </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 55%"
-                            aria-valuenow="55"
-                            aria-valuemin="0"
-                            aria-valuemax="100"></div>
+                        <div class="mobile__toggler">
+                          <div class="progress my-3">
+                            <div
+                              class="progress-bar"
+                              role="progressbar"
+                              style="width: 55%"
+                              aria-valuenow="55"
+                              aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <p class="card-text">
+                            Learnt the basics for project management
+                          </p>
                         </div>
-                        <p class="card-text">
-                          Using it for basic project management
-                        </p>
                       </div>
                     </div>
                   </div>
